--- a/historia/historia.html
+++ b/historia/historia.html
@@ -21,7 +21,7 @@
   <body>
     <div class="container-fluid" style="text-align: center">
       <header>
-        <h1>Nuestra historia 💕💑</h1>
+        <h1>💑 Nuestra historia 💕</h1>
         <hr />
       </header>
       <div class="container">
