--- a/recuerdos/recuerdos.html
+++ b/recuerdos/recuerdos.html
@@ -20,10 +20,7 @@
     <script src="/navbar/navbar.js"></script>
   </head>
   <body>
-    <div
-      class="container-fluid"
-      style="border-style: solid; border-color: red; text-align: center"
-    >
+    <div class="container-fluid" style="text-align: center">
       <section class="recuerdos-section">
         <h2 class="section-title">🌟 Nuestros recuerdos 🌟</h2>
 
@@ -33,9 +30,9 @@
               El primer <strong><i>Te amo</i></strong> ❤️
             </h1>
           </div>
-          <div class="postit" style="background-color: #d1ecf1">
+          <div class="postit" style="background-color: var(--azulito)">
             <img
-              src="https://raw.githubusercontent.com/AlanGF7/our-repo/main/assets/primerasalida.jpg"
+              src="https://raw.githubusercontent.com/AlanGF7/our-repo/main/assets/primeras_fotos/primerasalida.jpg"
               alt="Recuerdo 1"
             />
             <p>Nuestra primera foto juntos</p>
@@ -45,7 +42,7 @@
           </div>
           <div class="postit" style="background-color: #fff3cd">
             <img
-              src="https://raw.githubusercontent.com/AlanGF7/our-repo/main/assets/patinajehielo.jpg"
+              src="https://raw.githubusercontent.com/AlanGF7/our-repo/main/assets/primeras_fotos/patinajehielo.jpg"
               alt="Recuerdo 2"
             />
             <p>La primera vez que fuimos a patinar</p>
@@ -56,9 +53,9 @@
               mal
             </p>
           </div>
-          <div class="postit" style="background-color: #e2e3e5">
+          <div class="postit" style="background-color: var(--gricecito)">
             <img
-              src="https://raw.githubusercontent.com/AlanGF7/our-repo/main/assets/patinajehielo.jpg"
+              src="https://raw.githubusercontent.com/AlanGF7/our-repo/main/assets/primeras_fotos/PrimerPicnic.jpg"
               alt="Recuerdo 2"
             />
             <p>Nuestro primer picnic en el parque</p>
@@ -68,17 +65,14 @@
           </div>
           <div class="postit" style="background-color: var(--lavanda)">
             <img
-              src="https://picsum.photos/200/150?random=2"
+              src="https://raw.githubusercontent.com/AlanGF7/our-repo/main/assets/primeras_fotos/SegundoPicnic.jpg"
               alt="Recuerdo 2"
             />
             <p>Nuestro picnic en el Tangamaga (Que te destrocé en el UNO)</p>
           </div>
-          <div class="postit" style="background-color: #f8d7da">
-            <p>Tu abrazo cuando más lo necesitaba 🤗</p>
-          </div>
           <div class="postit" style="background-color: var(--salmon)">
             <img
-              src="https://picsum.photos/200/150?random=2"
+              src="https://raw.githubusercontent.com/AlanGF7/our-repo/main/assets/primeras_fotos/Wimo.jpg"
               alt="Recuerdo 2"
             />
             <p>
@@ -93,49 +87,57 @@
             </p>
           </div>
           <div class="postit" style="background-color: var(--lavanda)">
-            <img
-              src="https://picsum.photos/200/150?random=2"
-              alt="Recuerdo 2"
-            />
             <p>
               La primera vez que fui a San Luis y estaba nervioso; pensando que
               tu papá me querría matar
             </p>
           </div>
-          <div class="postit" style="background-color: var(--pistache)">
+          <div class="postit" style="background-color: var(--azulito)">
             <p>Cuando me ganaste en el UNO y te aposté un Starbucks</p>
           </div>
-          <div class="postit" style="background-color: var(--pistache)">
+          <div class="postit" style="background-color: var(--amarillo)">
             <p>La vez que fuimos a Las Duyas con mis abuelos</p>
           </div>
-          <div class="postit" style="background-color: var(--pistache)">
+          <div class="postit" style="background-color: var(--lavanda)">
             <p>
               La primera vez que fui a verte en tu partido y me dijiste:
               <i>"Entonces así se siente que vengan a verte..."</i>
             </p>
           </div>
-          <div class="postit" style="background-color: var(--pistache)">
+          <div class="postit" style="background-color: var(--gricecito)">
             <p>Cuando hicimos un equipazo en el trabajo de Francés</p>
           </div>
-          <div class="postit" style="background-color: var(--pistache)">
+          <div class="postit" style="background-color: var(--amarillo)">
             <p>Cuando te llevaste la pelotita de Liverpool jijiji</p>
           </div>
-          <div class="postit" style="background-color: var(--pistache)">
+          <div class="postit" style="background-color: var(--gricecito)">
+            <img
+              src="https://raw.githubusercontent.com/AlanGF7/our-repo/main/assets/galería/20241116_071914.jpg"
+              alt="Recuerdo 2"
+            />
             <p>Nuestra primera ida al Festival del Globo</p>
           </div>
-          <div class="postit" style="background-color: var(--lavanda)">
+          <div class="postit" style="background-color: var(--amarillo)">
             <p>Cuando fuimos a recoger a la Trufa 🐶</p>
           </div>
-          <div class="postit" style="background-color: var(--lavanda)">
+          <div class="postit" style="background-color: var(--rosa-pastel)">
             <p>Aquella noche que vimos "Encanto" 💖</p>
           </div>
           <div class="postit" style="background-color: var(--lavanda)">
             <p>En nuestra primera salida, que te compré donas de "El Globo"</p>
           </div>
-          <div class="postit" style="background-color: var(--lavanda)">
+          <div class="postit" style="background-color: var(--pistache)">
+            <img
+              src="https://raw.githubusercontent.com/AlanGF7/our-repo/main/assets/primeras_fotos/PrimerBaileJuntos.jpg"
+              alt="Recuerdo 2"
+            />
             <p>Nuestro primer baile oficial juntos en la uni</p>
           </div>
           <div class="postit" style="background-color: var(--lavanda)">
+            <img
+              src="https://raw.githubusercontent.com/AlanGF7/our-repo/main/assets/galería/OperacionTobillo.jpg"
+              alt="Recuerdo 2"
+            />
             <p>Cuando estuvimos juntos en tu operación de tu tobillo</p>
           </div>
           <div class="postit" style="background-color: var(--lavanda)">
