Terminada Galería y añadida Playlist Maintenance

--- a/cartas/cartas.html
+++ b/cartas/cartas.html
@@ -71,7 +71,7 @@
               <p class="card-text">
                 <i
                   >"...Siempre pensé que un hogar se basaba en cuatro paredes y
-                  un techo; un par de puertas y ventanas, a evces alfombras y
+                  un techo; un par de puertas y ventanas, a veces alfombras y
                   fogatas para conservar el calor; hasta que te conocí. En ese
                   momento mi hogar cambió, ahora tienen brazos que me cuidan del
                   frío, un par de manos en las que confío y un corazón que late
