--- a/recuerdos/recuerdos.html
+++ b/recuerdos/recuerdos.html
@@ -140,16 +140,24 @@
             />
             <p>Cuando estuvimos juntos en tu operación de tu tobillo</p>
           </div>
-          <div class="postit" style="background-color: var(--lavanda)">
+          <div class="postit" style="background-color: var(--pistache)">
             <p>
               Cuando "No subí" tu tarea y pensaste que todo se había estropeado
               (Y al final ni pasó nada)
             </p>
           </div>
-          <div class="postit" style="background-color: var(--lavanda)">
+          <div class="postit" style="background-color: var(--salmon)">
+            <img
+              src="https://raw.githubusercontent.com/AlanGF7/our-repo/main/assets/galería/20250214_215043.jpg"
+              alt="Recuerdo 2"
+            />
             <p>Nuestro San Valentín en Casa Biznaga</p>
           </div>
-          <div class="postit" style="background-color: var(--lavanda)">
+          <div class="postit" style="background-color: var(--azulito)">
+            <img
+              src="https://raw.githubusercontent.com/AlanGF7/our-repo/main/assets/galería/20240127_070903.jpg"
+              alt="Recuerdo 2"
+            />
             <p>Nuestro viaje a Puerto Vallarta</p>
           </div>
           <div class="postit" style="background-color: var(--lavanda)">
@@ -158,55 +166,44 @@
               día siguiende
             </p>
           </div>
-          <div class="postit" style="background-color: var(--lavanda)">
+          <div class="postit" style="background-color: var(--amarillo)">
+            <img
+              src="https://raw.githubusercontent.com/AlanGF7/our-repo/main/assets/galería/20250118_210855.jpg"
+              alt="Recuerdo 2"
+            />
             <p>Nuestra cena de Navidad (100/10)</p>
           </div>
-          <div class="postit" style="background-color: var(--lavanda)">
+          <div class="postit" style="background-color: var(--gricecito)">
             <p>
               Las primeras veces que fuimos a Sushi Roll (Que se me cayó mi
               rollo en la soya)
             </p>
           </div>
-          <div class="postit" style="background-color: var(--lavanda)">
+          <div class="postit" style="background-color: var(--rosa-pastel)">
             <p>Cuando paseábamos a la Chabe en el parquecito</p>
           </div>
-          <div class="postit" style="background-color: var(--lavanda)">
+          <div class="postit" style="background-color: var(--azulito)">
             <p>Cuando la hice de tu traductor porque te quedaste afónica</p>
           </div>
           <div class="postit" style="background-color: var(--amarillo)">
             <p>Nuestra primera vez en el café "Lacuna"</p>
           </div>
-          <div class="postit" style="background-color: var(--lavanda)">
+          <div class="postit" style="background-color: var(--pistache)">
             <p>Cuando organizaste con Jared mi cumpleaños</p>
           </div>
-          <div class="postit" style="background-color: var(--lavanda)">
+          <div class="postit" style="background-color: var(--salmon)">
             <p>El primer concierto de Bocelli</p>
           </div>
-          <div class="postit" style="background-color: var(--lavanda)">
+          <div class="postit" style="background-color: var(--azulito)">
             <p>El primer concierto de Morat</p>
           </div>
-          <div class="postit" style="background-color: var(--lavanda)">
+          <div class="postit" style="background-color: var(--pistache)">
             <p>Cuando lloraste por el perrito que nos siguió en la calle</p>
           </div>
-          <div class="postit" style="background-color: var(--lavanda)">
+          <div class="postit" style="background-color: var(--gricecito)">
             <p>
               Cuando te aventaste tu "Es que mis amigas sí me invitan a salir"
             </p>
-          </div>
-          <div class="postit" style="background-color: var(--lavanda)">
-            <p>Cuando lloraste por el perrito que nos siguió en la calle</p>
-          </div>
-          <div class="postit" style="background-color: var(--lavanda)">
-            <p>Cuando lloraste por el perrito que nos siguió en la calle</p>
-          </div>
-          <div class="postit" style="background-color: var(--lavanda)">
-            <p>Cuando lloraste por el perrito que nos siguió en la calle</p>
-          </div>
-          <div class="postit" style="background-color: var(--lavanda)">
-            <p>Cuando lloraste por el perrito que nos siguió en la calle</p>
-          </div>
-          <div class="postit" style="background-color: var(--lavanda)">
-            <p>Cuando lloraste por el perrito que nos siguió en la calle</p>
           </div>
           <!-- Puedes duplicar más post-its -->
         </div>
