--- a/10cosas/10cosas.html
+++ b/10cosas/10cosas.html
@@ -20,7 +20,7 @@
     <script src="/navbar/navbar.js"></script>
   </head>
   <body>
-    <div class="container-fluid">
+    <div class="container-fluid" style="text-align: center">
       <div class="container mt-4">
         <h2 class="text-center mb-4">💘 Cosas que amo de ti 💘</h2>
         <hr />
