--- a/anecdotas/anecdotas.html
+++ b/anecdotas/anecdotas.html
@@ -20,69 +20,105 @@
     <script src="/navbar/navbar.js"></script>
   </head>
   <body>
-    <div
-      class="container-fluid"
-      style="border-style: solid; border-color: red; text-align: center"
-    >
+    <div class="container-fluid" style="text-align: center">
       <section class="anecdotas-section">
         <h2 class="section-title">📖 Nuestras Anécdotas 📖</h2>
+        <hr />
 
         <div class="anecdota-card">
-          <img
-            src="https://picsum.photos/seed/anec1/300/200"
-            alt="Foto anécdota 1"
-          />
           <div class="anecdota-text">
             <h3>
               Cuando me intentaron ligar y yo ni me di cuenta (Pero tu sí)
             </h3>
             <p>
-              Ese día fuimos por helado y terminamos caminando sin rumbo por
-              horas. Recuerdo que no parábamos de reír. Fue el inicio de todo 💖
+              Fue en la casa de tu tío Richi, que se acercó a mi una chava con
+              cabello rizado y empezó de: "Ay mira somos chinos" y recuerdo que
+              cuando pidió que nos tomáramos una foto te fui a buscar... (Y ya
+              no quiso JAJAJA)
             </p>
           </div>
         </div>
 
         <div class="anecdota-card">
-          <img
-            src="https://picsum.photos/seed/anec2/300/200"
-            alt="Foto anécdota 2"
-          />
           <div class="anecdota-text">
             <h3>La primera vez que celebramos mi cumpleaños</h3>
-            <p>Tu papá casi arruina la sorpresa y yo ni en cuenta...</p>
+            <p>
+              Después de la fiesta destructiva en Siete18, que estabas toda
+              estresada y ansiosa de que no salía del depa... También que tu
+              papá te llamó y te preguntó cómo iba todo y yo estaba a un lado;
+              debo reconocerte que hiciste muy buen trabajo porque la verdad no
+              sospeché nada de nada...
+            </p>
           </div>
+          <img
+            src="https://raw.githubusercontent.com/AlanGF7/our-repo/main/assets/galería/Pumpeaños.jpg"
+            alt="Foto anécdota 2"
+          />
         </div>
 
         <div class="anecdota-card">
           <img
-            src="https://picsum.photos/seed/anec2/300/200"
+            src="https://raw.githubusercontent.com/AlanGF7/our-repo/main/assets/galería/TimmyTrixie.jpg"
             alt="Foto anécdota 2"
+            style="height: 20%"
           />
           <div class="anecdota-text">
             <h3>La vez que nos vestimos de Timmy y Trixie</h3>
-            <p>Y pinche Jared nos quedó mal</p>
+            <p>
+              Cuando Jared nos dijo que iba a hacerse una fiesta de disfraces, y
+              nos organizamos para comprar las cosas. Al final ni se hizo y yo
+              compré la gorra que nada que ver; lo bueno es que tu pudiste ir a
+              cambiar la camisa morada jijiji
+            </p>
           </div>
         </div>
 
         <div class="anecdota-card">
-          <img
-            src="https://picsum.photos/seed/anec2/300/200"
-            alt="Foto anécdota 2"
-          />
           <div class="anecdota-text">
             <h3>Cuando la Chabela se mojó</h3>
-            <p>Y tuvimos que bañarla porque el agua estaba estancada</p>
+            <p>
+              Creo que esta te acuerdas perfectamente, cuando Chabela estaba
+              corriendo en el patio de tu fraccionamiento y sin darse cuenta se
+              aventó al agua toda estancada. Creo que fue la primera vez que la
+              bañamos juntos
+            </p>
+          </div>
+          <img
+            src="https://raw.githubusercontent.com/AlanGF7/our-repo/main/assets/galería/Chabela2.jpg"
+            alt="Foto anécdota 2"
+          />
+        </div>
+        <div class="anecdota-card">
+          <div class="anecdota-text">
+            <h3>Cuando mamá te dejó el arroz de P.F. Chang</h3>
+            <p>
+              Creo que fue la primera vez que fuimos a comer con mi mamá,
+              recuerdo que estabas súper nerviosa. Y no nos pudimos acabar el
+              platillo, y mamá te dejó el arroz para que pudieras comer bien los
+              siguientes días
+            </p>
           </div>
         </div>
         <div class="anecdota-card">
-          <img
-            src="https://picsum.photos/seed/anec2/300/200"
-            alt="Foto anécdota 2"
-          />
           <div class="anecdota-text">
-            <h3>Cuando mamá te dejó el arroz de P.F. Chang</h3>
-            <p>Y también cuando dijo: "Mi hijo no molesta a nadie"</p>
+            <h3>La pelotita de Liverpool</h3>
+            <p>
+              Cuando te "encontraste" la pelotita de Liverpool y andabas súper
+              nerviosa mirando a todos lados. Hasta a mi me pusiste nervioso 😂
+              y todo para que la pelota duró como 1 semana y de ahí se echó a
+              perder
+            </p>
+          </div>
+        </div>
+        <div class="anecdota-card">
+          <div class="anecdota-text">
+            <h3>Cuando mamá te dijo: "Yo le había dicho de ir ahí"</h3>
+            <p>
+              JAJAJAJA Fue en mi ceremonia que era de las primeras veces que
+              hablaste con mi mamá, y le dijiste que no te parecía un lugar
+              apropiado ir a McDonalds (O algún lugar así) a celebrar, y ella te
+              dijo: "Pues yo le había dicho a Alan que fuéramos ahí"
+            </p>
           </div>
         </div>
 
