--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
     <nav id="navbar"></nav>
 
     <link rel="stylesheet" href="styles.css" />
-    <!--<script src="/navbar/navbar.js"></script>-->
-    <!--<script src="/js/navbar.js"></script>-->
   </head>
   <body>
     <div class="container-fluid" style="text-align: center">
@@ -47,7 +45,7 @@
             <div class="card col-sm-4 col-md-3">
               <div class="image-hover position-relative">
                 <img
-                  src="https://raw.githubusercontent.com/AlanGF7/our-repo/main/assets/primerasalida.jpg"
+                  src="https://raw.githubusercontent.com/AlanGF7/our-repo/main/assets/primeras_fotos/primerasalida.jpg"
                   class="card-img-top"
                   alt="Ourphotos"
                 />
@@ -72,7 +70,7 @@
             <div class="card col-sm-4 col-md-3">
               <div class="image-hover position-relative">
                 <img
-                  src="https://raw.githubusercontent.com/AlanGF7/our-repo/main/assets/testito.jpg"
+                  src="https://raw.githubusercontent.com/AlanGF7/our-repo/main/assets/galería/NavidadPijama.jpg"
                   class="card-img-top"
                   alt="Ourphotos"
                 />
@@ -94,7 +92,7 @@
             <div class="card col-sm-4 col-md-3">
               <div class="image-hover position-relative">
                 <img
-                  src="https://raw.githubusercontent.com/AlanGF7/our-repo/main/assets/patinajehielo.jpg"
+                  src="https://raw.githubusercontent.com/AlanGF7/our-repo/main/assets/primeras_fotos/patinajehielo.jpg"
                   class="card-img-top"
                   alt="Ourphotos"
                 />
