--- a/navbar/navbar.html
+++ b/navbar/navbar.html
@@ -55,7 +55,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Playlist</a>
+              <a class="nav-link" href="/playlist/playlist.html">Playlist</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../10cosas/10cosas.html">Cualidades</a>
