--- a/playlist/playlist.html
+++ b/playlist/playlist.html
@@ -14,7 +14,7 @@
 
     <nav id="navbar"></nav>
 
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/styles.css" />
     <link rel="stylesheet" href="/playlist/playlist.css" />
   </head>
   <body>
@@ -29,11 +29,13 @@
           <img
             src="https://raw.githubusercontent.com/AlanGF7/our-repo/main/assets/galería/Chabela.jpg"
             alt=""
+            style="max-width: 80%; max-height: 90%; border-radius: 10%"
           />
         </div>
       </main>
 
       <footer>
+        <br />
         <p>Hecho con ❤️ por Marvin</p>
       </footer>
     </div>
