--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       integrity="sha384-whatever"
       crossorigin="anonymous"
     ></script>
-    <script src="/our-repo/navbar/navbar.js"></script>
-    <!--<script src="/navbar/navbar.js"></script>-->
+    <!--<script src="/our-repo/navbar/navbar.js"></script>-->
+    <script src="/navbar/navbar.js"></script>
   </body>
 </html>
