--- a/recuerdos/recuerdos.html
+++ b/recuerdos/recuerdos.html
@@ -206,6 +206,9 @@
               Cuando te aventaste tu "Es que mis amigas sí me invitan a salir"
             </p>
           </div>
+          <div class="postit" style="background-color: var(--amarillo)">
+            <p>Cuando iba a dejarte y a recogerte a la uni</p>
+          </div>
           <!-- Puedes duplicar más post-its -->
         </div>
       </section>
