--- a/galeria/galeria.html
+++ b/galeria/galeria.html
@@ -735,6 +735,13 @@
             style="height: 80%"
           />
         </div>
+        <div>
+          <img
+            src="https://raw.githubusercontent.com/AlanGF7/our-repo/main/assets/primeeras_fotos/PrimerasFloresAmarillas.jpg"
+            alt=""
+            style="height: 80%"
+          />
+        </div>
 
         <div class="hard"></div>
         <div class="hard">
