--- a/galeria/galeria.html
+++ b/galeria/galeria.html
@@ -737,7 +737,14 @@
         </div>
         <div>
           <img
-            src="https://raw.githubusercontent.com/AlanGF7/our-repo/main/assets/primeeras_fotos/PrimerasFloresAmarillas.jpg"
+            src="https://raw.githubusercontent.com/AlanGF7/our-repo/main/assets/primeras_fotos/PrimerasFloresAmarillas.jpg"
+            alt=""
+            style="height: 80%"
+          />
+        </div>
+        <div>
+          <img
+            src="https://raw.githubusercontent.com/AlanGF7/our-repo/main/assets/galería/Rodolfa.jpg"
             alt=""
             style="height: 80%"
           />
