--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
             ya tienen algo de información. <br />
             Lo que me emociona profundamente es el poder ir rellenando esta
             página poco a poco; <br />conociéndonos, estoy seguro que tendremos
-            más fotos para nuestra <a href="/galeria/galeria.html">galería</a>,
-            más <a href="/anecdotas/anecdotas.html">anécdotas</a>, más
-            <a href="/recuerdos/recuerdos.html">recuerdos</a>
+            más fotos para nuestra <a href="galeria/galeria.html">galería</a>,
+            más <a href="anecdotas/anecdotas.html">anécdotas</a>, más
+            <a href="recuerdos/recuerdos.html">recuerdos</a>
           </p>
         </div>
 
@@ -63,7 +63,7 @@
                   Quizás aquí podamos ir teniendo nuestro álbum de fotos. (Sin
                   olvidar nuestro 🌹 <i>libro de aventuras</i> 🌹)
                 </p>
-                <a href="/galeria/galeria.html" class="btn card-button"
+                <a href="galeria/galeria.html" class="btn card-button"
                   >Ver fotos</a
                 >
               </div>
@@ -85,7 +85,7 @@
                   Hemos tenido muchas anécdotas que, estoy seguro nos podrán
                   sacar muchas sonrisas 📝
                 </p>
-                <a href="/anecdotas/anecdotas.html" class="btn card-button"
+                <a href="anecdotas/anecdotas.html" class="btn card-button"
                   >La pelotita de Liverpool</a
                 >
               </div>
@@ -110,7 +110,7 @@
                   Desde la primera vez que fuimos a Wimo, hasta la vez que me
                   mandaste a dormir al piso... 😂
                 </p>
-                <a href="/recuerdos/recuerdos.html" class="btn card-button"
+                <a href="recuerdos/recuerdos.html" class="btn card-button"
                   >¿Te acuerdas cuando...</a
                 >
               </div>
