--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!--<nav id="navbar"></nav>-->
 
-    <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <nav class="navbar-custom navbar navbar-expand-lg" id="navbar">
