--- a/historia/historia.html
+++ b/historia/historia.html
@@ -12,13 +12,59 @@
       crossorigin="anonymous"
     />
 
-    <div id="navbar"></div>
+    <!--<div id="navbar"></div>-->
 
-    <link rel="stylesheet" href="../styles.css" />
-    <link rel="stylesheet" href="./historia.css" />
-    <script src="/navbar/navbar.js"></script>
+    <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="historia.css" />
+    <!--<script src="/navbar/navbar.js"></script>-->
   </head>
   <body>
+    <nav class="navbar-custom navbar navbar-expand-lg" id="navbar">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">Inicio</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                aria-current="page"
+                href="historia/historia.html"
+                >Historia</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="recuerdos/recuerdos.html">Recuerdos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="galeria/galeria.html">Galería</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="cartas/cartas.html">Cartas</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="anecdotas/anecdotas.html">Anécdotas</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="playlist/playlist.html">Playlist</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="10cosas/10cosas.html">Cualidades</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <div class="container-fluid" style="text-align: center">
       <header>
         <h1>💑 Nuestra historia 💕</h1>
@@ -35,6 +81,6 @@
       integrity="sha384-whatever"
       crossorigin="anonymous"
     ></script>
-    <script src="/historia/historia.js"></script>
+    <script src="historia/historia.js"></script>
   </body>
 </html>
