--- a/historia/historia.html
+++ b/historia/historia.html
@@ -14,8 +14,8 @@
 
     <!--<div id="navbar"></div>-->
 
-    <link rel="stylesheet" href="/styles.css" />
-    <link rel="stylesheet" href="historia.css" />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/historia/historia.css" />
     <!--<script src="/navbar/navbar.js"></script>-->
   </head>
   <body>
