--- a/historia/historia.html
+++ b/historia/historia.html
@@ -21,7 +21,7 @@
   <body>
     <nav class="navbar-custom navbar navbar-expand-lg" id="navbar">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Inicio</a>
+        <a class="navbar-brand" href="/index.html">Inicio</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -36,12 +36,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a
-                class="nav-link"
-                aria-current="page"
-                href="historia/historia.html"
-                >Historia</a
-              >
+              <a class="nav-link" aria-current="page" href="#">Historia</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="recuerdos/recuerdos.html">Recuerdos</a>
