--- a/historia/historia.html
+++ b/historia/historia.html
@@ -14,14 +14,14 @@
 
     <!--<div id="navbar"></div>-->
 
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="../styles.css" />
     <link rel="stylesheet" href="/historia/historia.css" />
     <!--<script src="/navbar/navbar.js"></script>-->
   </head>
   <body>
     <nav class="navbar-custom navbar navbar-expand-lg" id="navbar">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/index.html">Inicio</a>
+        <a class="navbar-brand" href="../index.html">Inicio</a>
         <button
           class="navbar-toggler"
           type="button"
