--- a/historia/historia.html
+++ b/historia/historia.html
@@ -39,22 +39,26 @@
               <a class="nav-link" aria-current="page" href="#">Historia</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="recuerdos/recuerdos.html">Recuerdos</a>
+              <a class="nav-link" href="../recuerdos/recuerdos.html"
+                >Recuerdos</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="galeria/galeria.html">Galería</a>
+              <a class="nav-link" href="../galeria/galeria.html">Galería</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="cartas/cartas.html">Cartas</a>
+              <a class="nav-link" href="../cartas/cartas.html">Cartas</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="anecdotas/anecdotas.html">Anécdotas</a>
+              <a class="nav-link" href="../anecdotas/anecdotas.html"
+                >Anécdotas</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="playlist/playlist.html">Playlist</a>
+              <a class="nav-link" href="../playlist/playlist.html">Playlist</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="10cosas/10cosas.html">Cualidades</a>
+              <a class="nav-link" href="../10cosas/10cosas.html">Cualidades</a>
             </li>
           </ul>
         </div>
