Ruteo js historia

--- a/historia/historia.html
+++ b/historia/historia.html
@@ -80,6 +80,6 @@
       integrity="sha384-whatever"
       crossorigin="anonymous"
     ></script>
-    <script src="historia/historia.js"></script>
+    <script src="/historia/historia.js"></script>
   </body>
 </html>
