--- a/historia/historia.html
+++ b/historia/historia.html
@@ -15,7 +15,7 @@
     <!--<div id="navbar"></div>-->
 
     <link rel="stylesheet" href="../styles.css" />
-    <link rel="stylesheet" href="/historia/historia.css" />
+    <link rel="stylesheet" href="historia.css" />
     <!--<script src="/navbar/navbar.js"></script>-->
   </head>
   <body>
@@ -80,6 +80,6 @@
       integrity="sha384-whatever"
       crossorigin="anonymous"
     ></script>
-    <script src="/historia/historia.js"></script>
+    <script src="historia.js"></script>
   </body>
 </html>
