--- a/galeria/galeria.html
+++ b/galeria/galeria.html
@@ -19,13 +19,63 @@
       rel="stylesheet"
     />
 
-    <div id="navbar"></div>
+    <!--<div id="navbar"></div>-->
 
     <link rel="stylesheet" href="../styles.css" />
-    <link rel="stylesheet" href="./galeria.css" />
-    <script src="/navbar/navbar.js"></script>
+    <link rel="stylesheet" href="galeria.css" />
+    <!--<script src="/navbar/navbar.js"></script>-->
   </head>
   <body>
+    <nav class="navbar-custom navbar navbar-expand-lg" id="navbar">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="../index.html">Inicio</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                aria-current="page"
+                href="../historia/historia.html"
+                >Historia</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="../recuerdos/recuerdos.html"
+                >Recuerdos</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Galería</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../cartas/cartas.html">Cartas</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../anecdotas/anecdotas.html"
+                >Anécdotas</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../playlist/playlist.html">Playlist</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../10cosas/10cosas.html">Cualidades</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <div class="container-fluid container-wrapper">
       <div class="flipbook">
         <div class="hard"><h1>Nuestro libro de aventuras</h1></div>
@@ -762,5 +812,10 @@
     <script>
       $(".flipbook").turn();
     </script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
