--- a/historia/historia.html
+++ b/historia/historia.html
@@ -36,7 +36,9 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="#">Historia</a>
+              <a class="nav-link active" aria-current="page" href="#"
+                >Historia</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../recuerdos/recuerdos.html"
