--- a/cartas/cartas.html
+++ b/cartas/cartas.html
@@ -12,11 +12,11 @@
       crossorigin="anonymous"
     />
 
-    <div id="navbar"></div>
+    <!--<div id="navbar"></div>-->
 
     <link rel="stylesheet" href="../styles.css" />
-    <link rel="stylesheet" href="./cartas.css" />
-    <script src="/navbar/navbar.js"></script>
+    <link rel="stylesheet" href="cartas.css" />
+    <!--<script src="/navbar/navbar.js"></script>-->
   </head>
   <body>
     <div class="container-fluid" style="text-align: center">
@@ -218,8 +218,8 @@
     </div>
 
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-whatever"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
       crossorigin="anonymous"
     ></script>
   </body>
