--- a/galeria/galeria.html
+++ b/galeria/galeria.html
@@ -51,7 +51,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="../recuerdos/recuerdos.html"
+              <a class="nav-link" href="../recuerdos/recuerdos.html"
                 >Recuerdos</a
               >
             </li>
