--- a/playlist/playlist.html
+++ b/playlist/playlist.html
@@ -12,12 +12,63 @@
       crossorigin="anonymous"
     />
 
-    <nav id="navbar"></nav>
+    <!--<div id="navbar"></div>-->
 
-    <link rel="stylesheet" href="/styles.css" />
-    <link rel="stylesheet" href="/playlist/playlist.css" />
+    <link rel="stylesheet" href="../styles.css" />
+    <link rel="stylesheet" href="playlist.css" />
+    <!--<script src="/navbar/navbar.js"></script>-->
   </head>
   <body>
+    <nav class="navbar-custom navbar navbar-expand-lg" id="navbar">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="../index.html">Inicio</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                aria-current="page"
+                href="../historia/historia.html"
+                >Historia</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../recuerdos/recuerdos.html"
+                >Recuerdos</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../galeria/galeria.html">Galería</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../cartas/cartas.html">Cartas</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../anecdotas/anecdotas.html"
+                >Anécdotas</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Playlist</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../10cosas/10cosas.html">Cualidades</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <div class="container-fluid" style="text-align: center">
       <main>
         <div class="container-fluid" id="inicio">
@@ -40,13 +91,10 @@
       </footer>
     </div>
 
-    <!-- Bootstrap JS (con Popper) -->
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-whatever"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
       crossorigin="anonymous"
     ></script>
-    <!--<script src="/our-repo/navbar/navbar.js"></script>-->
-    <script src="/navbar/navbar.js"></script>
   </body>
 </html>
